@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.13-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-13 06:36:05, took 00:13:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-11-13 07:18:15, took 00:12:42, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
