@@ -17655,3 +17655,6 @@ qc pass: lwapp server
 ---------------------------------- 2025-11-13 06:03:31 25.11.13
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-11-13 06:44:02 25.11.13
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
